force-app/main/default/objects/TM_TOMA__Contract_Vehicle__c/fields/INT_L_PRGM_WORK__c.field-meta.xml
<CustomField>
    <fullName>INT_L_PRGM_WORK__c</fullName>
    <label>INT&apos;L PRGM / Work</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>International__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Direct Commercial Sale (DCS)</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Foreign Military Sale (FMS)</fullName>
            </value>
            <value>
                <fullName>Other Foreign</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>