force-app/main/default/objects/TM_TOMA__Contract_Vehicle__c/fields/Org_IDCLM__c.field-meta.xml
<CustomField>
    <fullName>Org_IDCLM__c</fullName>
    <description>The internal BAE organization code associated with the org/department that &quot;owns&quot; the project.</description>
    <inlineHelpText>The internal BAE organization code associated with the org/department that &quot;owns&quot; the project.</inlineHelpText>
    <label>Org ID</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Org_NameCLM__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>401.01.05.24.730116</fullName>
            </value>
            <value>
                <fullName>401.01.05.25.731016</fullName>
            </value>
            <value>
                <fullName>401.01.1130202</fullName>
            </value>
            <value>
                <fullName>401.01.1131000</fullName>
            </value>
            <value>
                <fullName>401.01.1141000</fullName>
            </value>
            <value>
                <fullName>401.01.1190000</fullName>
            </value>
            <value>
                <fullName>401.01.1230202</fullName>
            </value>
            <value>
                <fullName>401.01.1270202</fullName>
            </value>
            <value>
                <fullName>401.01.1410203</fullName>
            </value>
            <value>
                <fullName>401.01.1680103</fullName>
            </value>
            <value>
                <fullName>401.01.1700203</fullName>
            </value>
            <value>
                <fullName>401.01.1900103</fullName>
            </value>
            <value>
                <fullName>401.01.2610000</fullName>
            </value>
            <value>
                <fullName>401.01.2610033</fullName>
            </value>
            <value>
                <fullName>401.02.2000202</fullName>
            </value>
            <value>
                <fullName>401.02.2026000</fullName>
            </value>
            <value>
                <fullName>401.02.2026600</fullName>
            </value>
            <value>
                <fullName>401.02.2060202</fullName>
            </value>
            <value>
                <fullName>401.02.2070202</fullName>
            </value>
            <value>
                <fullName>401.02.2126700</fullName>
            </value>
            <value>
                <fullName>401.02.2126800</fullName>
            </value>
            <value>
                <fullName>401.02.2140000</fullName>
            </value>
            <value>
                <fullName>401.02.2160000</fullName>
            </value>
            <value>
                <fullName>401.02.2170000</fullName>
            </value>
            <value>
                <fullName>401.02.2180000</fullName>
            </value>
            <value>
                <fullName>401.02.2190000</fullName>
            </value>
            <value>
                <fullName>401.02.2200000</fullName>
            </value>
            <value>
                <fullName>401.02.2231000</fullName>
            </value>
            <value>
                <fullName>401.02.2231033</fullName>
            </value>
            <value>
                <fullName>401.02.2240000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>