force-app/main/default/objects/TM_TOMA__Contract_Vehicle__c/fields/Org_NameCLM__c.field-meta.xml
<CustomField>
    <fullName>Org_NameCLM__c</fullName>
    <inlineHelpText>The internal BAE organization/department that &quot;owns&quot; the project.</inlineHelpText>
    <label>Org Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFS - FISAC Cont</fullName>
            </value>
            <value>
                <fullName>AFS - FS JSF Field</fullName>
            </value>
            <value>
                <fullName>AFS-SES Ground Space Fld</fullName>
            </value>
            <value>
                <fullName>AFS - SES IRSP Cont</fullName>
            </value>
            <value>
                <fullName>Analytics Lab Cont Site</fullName>
            </value>
            <value>
                <fullName>Army&amp;MD Cont Site</fullName>
            </value>
            <value>
                <fullName>Army&amp;MD Field Site</fullName>
            </value>
            <value>
                <fullName>Army&amp;MD WFH - IDS Field</fullName>
            </value>
            <value>
                <fullName>ASFS - FS  WFH Field</fullName>
            </value>
            <value>
                <fullName>ASFS-MatSols Sustain Cont</fullName>
            </value>
            <value>
                <fullName>ASFS - SES WFH  Field</fullName>
            </value>
            <value>
                <fullName>ASFS - Space Programs</fullName>
            </value>
            <value>
                <fullName>BLS Intel Field Site</fullName>
            </value>
            <value>
                <fullName>BTC Cont Site</fullName>
            </value>
            <value>
                <fullName>BW - M&amp;SS</fullName>
            </value>
            <value>
                <fullName>Capture Mgt &amp; Inits - AFS</fullName>
            </value>
            <value>
                <fullName>Capture Mgt &amp; Inits - IDS</fullName>
            </value>
            <value>
                <fullName>Capture Mgt &amp; Inits-Intel</fullName>
            </value>
            <value>
                <fullName>Contract Admin - ASFS</fullName>
            </value>
            <value>
                <fullName>Contract Admin - IDS</fullName>
            </value>
            <value>
                <fullName>Contract Admin - Intel</fullName>
            </value>
            <value>
                <fullName>Contracts-ASFS SuppSvc</fullName>
            </value>
            <value>
                <fullName>Contracts - Fed Civ Cont</fullName>
            </value>
            <value>
                <fullName>Contracts-IDS SuppSvc</fullName>
            </value>
            <value>
                <fullName>Contracts-Intel SuppSvc</fullName>
            </value>
            <value>
                <fullName>Contracts Intel WFH-Field</fullName>
            </value>
            <value>
                <fullName>Corp Org - Fed Civ Cont</fullName>
            </value>
            <value>
                <fullName>D&amp;S FMV Analysis Cont Sit</fullName>
            </value>
            <value>
                <fullName>D&amp;S FMV Analysis Field</fullName>
            </value>
            <value>
                <fullName>D&amp;S - GeoInt Cont Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>